--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-Login
+Register
 {% endblock %}
 
 {% block content %}
@@ -17,14 +17,22 @@ Login
 <form method="POST" class="">
     {% csrf_token %}
     <div class="form-group">
+        {{ form.username.label_tag }}
+        {{ form.username}}
+    </div>
+    <div class="form-group">
         {{ form.email.label_tag }}
         {{ form.email}}
     </div>
     <div class="form-group">
-        {{ form.password.label_tag }}
-        {{ form.password }}
+        {{ form.password1.label_tag }}
+        {{ form.password1 }}    
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <div class="form-group">
+        {{ form.password2.label_tag }}
+        {{ form.password2 }}
+    </div>
+    <button type="submit" class="btn btn-primary">Register</button>
 </form>
 
 {% endblock %}
