--- a/templates/login.html
+++ b/templates/login.html
@@ -17,8 +17,8 @@ Login
 <form method="POST" class="">
     {% csrf_token %}
     <div class="form-group">
-        {{ form.email.label_tag }}
-        {{ form.email}}
+        {{ form.username.label_tag }}
+        {{ form.username}}
     </div>
     <div class="form-group">
         {{ form.password.label_tag }}
