--- a/templates/home.html
+++ b/templates/home.html
@@ -9,25 +9,23 @@
     <table border="1">
         <tr>
             <th>SN</th>
-            <th>Company Name</th>
-            <th>No of Transactions</th>
+            <th>Symbol</th>
+            <th>Open</th>
             <th>Max Price</th>
             <th>Min Price</th>
             <th>Closing Price</th>
-            <th>Traded Shares</th>
-            <th>Amount</th>
+            <th>Volume</th>
             <th>Previous Closing</th>
         </tr>
         {% for stock in stock_data %}
         <tr>
             <td>{{ stock.SN }}</td>
             <td>{{ stock.Company }}</td>
-            <td>{{ stock.Transactions }}</td>
+            <td>{{ stock.Open }}</td>
             <td>{{ stock.Max_Price }}</td>
             <td>{{ stock.Min_Price }}</td>
             <td>{{ stock.Closing_Price }}</td>
             <td>{{ stock.Traded_Shares }}</td>
-            <td>{{ stock.Amount }}</td>
             <td>{{ stock.Previous_Closing }}</td>
         </tr>
         {% endfor %}
