--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     </main>
 
     <footer>
-        <p class="">&copy; 2024 - Scrape</p>
+        <p class="c">&copy; 2024 - Scrape</p>
     </footer>
 </body>
 </html>
