--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@ Login
         {{ form.password.label_tag }}
         {{ form.password }}
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn">Login</button>
 </form>
 
 {% endblock %}
