Enhancement : Css updates for home

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,8 @@
 {% block header %}
     NEPSE Stock Data
 {% endblock %}
-
 {% block content %}
+    <h1 class="c">Market Summary From : {{date}}</h1>
     <table class="table" border="1">
         <tr>
             <th>SN</th>
