Enhancement : Css update to default django form

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -12,7 +12,7 @@
 <div class="dashboard">
     <h2 class="c">Welcome to Your Dashboard</h2>
     <div class="button-container">
-        <a href="{% url 'home' %}" class="dashboard-button">Scrape Data</a>
+        <a href="{% url 'home' %}" class="dashboard-button">Today's Data</a>
         <a href="{% url 'symbol' %}" class="dashboard-button">Scrape Scrip</a>
         <a href="{% url 'alert' %}" class="dashboard-button">Create alert</a>
     </div>
