--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,7 @@ main {
 .btn {
     display: block;
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     background: #007bff;
     border: none;
     border-radius: 4px;
@@ -37,7 +37,23 @@ main {
     font-size: 16px;
     cursor: pointer;
     text-align: center;
-    margin-top: 10px;
+    margin-top:15px ;
+}
+
+.form-control {
+    width: 80%;
+    padding: 10px;
+    margin: 15px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    font-size: 16px;
+}
+
+.form-control:focus {
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    outline: none;
 }
 
 .btn:hover {
