--- a/templates/dash.html
+++ b/templates/dash.html
@@ -15,6 +15,7 @@
         <a href="{% url 'home' %}" class="dashboard-button">Today's Data</a>
         <a href="{% url 'symbol' %}" class="dashboard-button">Scrape Scrip</a>
         <a href="{% url 'alert' %}" class="dashboard-button">Create alert</a>
+        <a href="{% url 'watchlist' %}" class="dashboard-button">View Watchlist</a>
     </div>
 </div>
 {% endblock %}
