--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -10,7 +10,7 @@
 {% endfor %}
 </ul>
 {% endif %}
-<h1 class="c">Market Watchlist of {{ user.username }}</h1>
+<h1 class="c">Market Watchlist for {{ user.username }}</h1>
 
 <table class="table" border="1">
     <tr>
