--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -25,6 +25,6 @@
     </tr>
 </table>
 
-<a href="{% url 'del_watchlist' %}" class="dashboard-button">Delete Watchlist</a>
+<a href="{% url 'del_watchlist' %}" class="c dashboard-button">Delete Watchlist</a>
 
 {% endblock %}
