--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,7 @@ main {
     border: solid 2px #000;
     border-collapse: collapse;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .btn {
@@ -76,6 +77,8 @@ main {
     border-radius: 8px;
     transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    float: right;
+    margin-top: 20px;
 }
 
 .dashboard-button:hover {
