Flow Management And Initial Setup for WATCHLIST

--- a/templates/alert.html
+++ b/templates/alert.html
@@ -26,5 +26,6 @@ Create Alert
     </div>
     <button type="submit" class="btn">Create</button>
 </form>
+<a href="{% url 'view_alerts' %}" class="c dashboard-button">View Alerts</a>
 
 {% endblock %}
