--- a/templates/viewalerts.html
+++ b/templates/viewalerts.html
@@ -28,6 +28,6 @@
     {% endfor %}
 </table>
 
-<a href="{% url 'del_watchlist' %}" class="c dashboard-button">Delete Watchlist</a>
+<a href="{% url 'del_alerts' %}" class="c dashboard-button">Delete Alerts</a>
 
 {% endblock %}
