Flow Management For Watchlist

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -15,7 +15,7 @@
         <a href="{% url 'home' %}" class="dashboard-button">Today's Data</a>
         <a href="{% url 'symbol' %}" class="dashboard-button">Scrape Scrip</a>
         <a href="{% url 'alert' %}" class="dashboard-button">Create alert</a>
-        <a href="{% url 'view_watchlist' %}" class="dashboard-button">View Watchlist</a>
+        <a href="{% url 'create_watchlist' %}" class="dashboard-button">Create Watchlist</a>
     </div>
 </div>
 {% endblock %}
