--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -23,5 +23,7 @@
             <td>{{ stock.max }}</td>
             <td>{{ stock.min }}</td>
             <td>{{ stock.today }}</td>
-        </tr>{% endfor %}</table>
+        </tr>
+        {% endfor %}
+    </table>
 {% endblock %}
