--- a/templates/symbol.html
+++ b/templates/symbol.html
@@ -26,7 +26,7 @@ Company Search
         {% elif method == "PUT" %}
             Update
         {% else%}
-            Create
+            Search
         {% endif %}
     </button>
 </form>
