--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -26,4 +26,6 @@
         </tr>
         {% endfor %}
     </table>
+    <a href="{% url 'del_watchlist' %}" class="c dashboard-button">Remove Watchlist</a>
+
 {% endblock %}
