Bug FIx And Flow Management

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,3 +92,8 @@ main {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background-color: #004494;
 }
+.note {
+    font: 100;
+    font-weight: 100;
+    font-size: smaller;
+}
