Notes Added And Database Removed

--- a/templates/alert.html
+++ b/templates/alert.html
@@ -26,6 +26,8 @@ Create Alert
     </div>
     <button type="submit" class="btn">Create</button>
 </form>
+<p class="note c">Note : Please Scrape Scrip if not available.</p>
+
 <a href="{% url 'view_alerts' %}" class="c dashboard-button">View Alerts</a>
 
 {% endblock %}
