Changes in settings : For Login & logout Authentication

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -18,4 +18,6 @@
         <a href="{% url 'create_watchlist' %}" class="dashboard-button">Create Watchlist</a>
     </div>
 </div>
+<a href="{% url 'logout' %}" class="c dashboard-button">logout</a>
+
 {% endblock %}
