Requirements Added And Minor Changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -31,4 +31,6 @@
         </tr>
         {% endfor %}
     </table>
+    <a href="{% url 'base' %}" class="dashboard-button">Home</a>
+
 {% endblock %}
