--- a/templates/viewalerts.html
+++ b/templates/viewalerts.html
@@ -11,7 +11,7 @@
 </ul>
 {% endif %}
 
-<h1 class="c">Market Watchlist for {{ user }}</h1>
+<h1 class="c">Alerts of {{ user }}</h1>
 
 <table class="table" border="1">
     <tr>
@@ -28,6 +28,7 @@
     {% endfor %}
 </table>
 
-<a href="{% url 'del_alerts' %}" class="c dashboard-button">Delete Alerts</a>
+    <a href="{% url 'del_alerts' %}" class="c dashboard-button">Delete Alerts</a>
+    <a href="{% url 'base' %}" class="dashboard-button">Home</a>
 
 {% endblock %}
